# py-rural-land-agent

./: .env.example  .gitignore  README.md  demo.py  docker-compose.yml  main.py  pyproject.toml  test_agent_manual.py
.claude/: settings.local.json
migrations/: 001_initial.sql
src/: config.py  database.py  logging_config.py
src/agent/: agent.py
src/api/: routes.py
src/ingestion/: __main__.py  pipeline.py
src/tools/: fazendas.py
tests/integration/: test_agent_geo.py
tests/unit/: test_tools.py
