[project]
name = "dados-fazenda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.0",
    "anthropic>=0.40",
    "fastapi>=0.111",
    "geopandas>=1.0",
    "google-genai>=1.0",
    "openai>=2.32.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "sse-starlette>=3.3.4",
    "structlog>=24.0",
    "typer>=0.12",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
markers = [
    "integration: testes que precisam de banco de dados real",
]
